--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -3,7 +3,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>.</p>
+    <p>A scientific notion.</p>
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
@@ -22,8 +22,8 @@ content to avoid any CSS collisions with our real content. -->
   <div class="masthead">
     <div class="container">
       <h3 class="masthead-title">
-        <a href="/" title="Home">Lanyon</a>
-        <small>Description of your site</small>
+        <a href="/" title="Home">流れ</a>
+        <small>Mathematical and Scientific Computing</small>
       </h3>
     </div>
   </div>
