--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -3,16 +3,17 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A scientific notion.</p>
+    <p>A scientific notion</p>
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
     <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/menu1/">Code blocks</a>
     <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/menu2/">More goodies</a>
     <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/menu3/">Tags</a>
+    <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/menu4/">Blog</a>
   </nav>
   <div class="sidebar-item">
-    <p>&copy; {{fill author}}.</p>
+    <p>&copy; {{fill author}}</p>
   </div>
 </div>
 
